--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "food-front",
+  "name": "resturant",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "json-server": "^0.17.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
